--- a/about us try.css
+++ b/about us try.css
@@ -315,15 +315,15 @@ nav ul li:hover > ul { display: block; }
 @media (max-width:425px) {
     .content h1 {
         font-size: 60px;
-        margin-top: -1.5rem;
+        margin-top: -2.5rem;
     }
     .back-video {
-        bottom: 33%;
+        bottom: 35%;
     }
     #docs {
         display: grid;
         place-items: center;
-        margin-top: -11rem;
+        margin-top: -12.3rem;
     }
     .content h4 {
         font-size: 1.7rem;
@@ -342,19 +342,30 @@ nav ul li:hover > ul { display: block; }
         margin-top: 0rem;
         font-size: 1.3rem;
     }
+    .footer .links {
+        display: none;
+    }
+    .book img {
+        width: 100%;
+        height: auto;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        border-radius: 10px;
+        margin-right: -10rem;
+    }
 }
 @media (max-width: 375px) {
     .content h1 {
         font-size: 60px;
-        margin-top: -1.5rem;
+        margin-top: -3rem;
     }
     .back-video {
-        bottom: 38%;
+        bottom: 40%;
     }
     #docs {
         display: grid;
         place-items: center;
-        margin-top: -13rem;
+        margin-top: -14.5rem;
     }
     .content h4 {
         font-size: 1.7rem;
