--- a/Capoeira Quotes.css
+++ b/Capoeira Quotes.css
@@ -107,17 +107,17 @@ header .navbar ul li a:hover {
 	background-position: center center;
 	background-attachment: fixed;
 }
-.home .content {
+.home .content_1 {
     max-width: 60rem;
     padding-left: 30px;
 }
-.home .content h3 {
+.home .content_1 h3 {
     font-size: 6rem;
     text-transform: uppercase;
     color: white;
 }
-.home .content p {
-    font-size: 1rem;
+.home .content_1 p {
+    font-size: 1.3rem;
     font-weight: lighter;
     line-height: 1.8;
     padding: 1rem 0;
@@ -130,7 +130,7 @@ header .navbar ul li a:hover {
     width: 100%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     color: #eee;
-    font-size: 2rem;
+    font-size: 1.5rem;
     text-decoration: none;
     text-align: center;
     transition: color 0.3s linear;
@@ -152,210 +152,86 @@ header .navbar ul li a:hover {
     text-shadow: -1px -1px 0 rgb(240, 183, 27), 1px -1px 0 rgb(240, 183, 27), -1px 1px 0 rgb(240, 183, 27), 1px 1px 0 rgb(240, 183, 27);
     text-transform: uppercase;
 }
-.basic .row {
-    display: flex;  
-    align-items: center;
-    flex-wrap: wrap;
-    background: var(--black);
-    margin-left: 4rem;
-    margin-right: 4rem;
+#section {
+    display: grid;
+    place-items: center;
+    min-height: 100vh;
+    width: 100vh;
 }
-.basic .row .content {
-    width: 50%;
-    text-align: left;
-    height: auto;
-    color: #fff;
-    top: 0;
-    background: var(--black);
-    margin-left: 4rem;
-}
-
-.basic .row .content h3 {
-    font-size: 2.7rem;
-    color: #cfae81;
-    font-weight: 500;
-}
-.basic .row .content p {
-    font-size: 1.2rem;
-    color: #ccc;
-    padding: 1rem 0;
-    line-height: 1.8;
-    font-weight: 200;
-}
-.basic .row img {
-    height: auto; 
-    max-width: 350px;
-}
-
-.row .btn {
-    background-color: #be9965;
-    ;
-    display: block;
-    width: 100%;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    color: #eee;
-    font-size: 2rem;
-    text-decoration: none;
-    text-align: center;
-    border-radius: 10px;
-}
-.row .btn:hover {
-    background-color: #916a34;
-}
-
-
-
 .heading {
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+    padding-bottom: 3.5rem;
+    font-size: 4rem;
+    margin-top: 10rem;
+}
+.heading span {
     color: var(--main-color);
     text-shadow: -1px -1px 0 rgb(240, 183, 27), 1px -1px 0 rgb(240, 183, 27), -1px 1px 0 rgb(240, 183, 27), 1px 1px 0 rgb(240, 183, 27);
     text-transform: uppercase;
 }
-.handbook .hand {
-    display: flex;  
-    align-items: center;
-    flex-wrap: wrap;
-    background: var(--black);
-    margin-left: 4rem;
-    margin-right: 4rem;
-}
-.handbook .hand img {
-    height: auto; 
-    width: 350px;
-}
-.handbook .hand .content {
-    width: 50%;
-    text-align: left;
-    height: auto;
-    color: #fff;
-    top: 0;
-    background: var(--black);
-    margin-left: 4rem;
-}
 
-.handbook .hand .content h3 {
-    font-size: 2.7rem;
+.book-list {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    display: flex;
+    margin-bottom: 3rem;
+    background: var(--black);
+}
+.book {
+    display: flex;
+    margin-bottom: 3rem;
+}
+.book img{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    border-radius: 10px;
+}
+.book-list img {
+    width: 300px;
+    height: 420px;
+}
+.content {
+    text-align: justify;
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+.content h3 {
+    font-size: 2.5rem;
     color: #cfae81;
-    font-weight: 500;
+    font-weight: 300;
+    margin-top: 2rem;
 }
-.handbook .hand .content p {
-    font-size: 1.2rem;
+.content p {
+    margin-top: 1.5rem;
+    font-size: 1.6rem;
     color: #ccc;
-    padding: 1rem 0;
-    line-height: 1.8;
-    font-weight: 200;
+    font-weight: 300;
+    margin-top: 2rem;
 }
-.hand .btn {
+.content .btn {
     background-color: #be9965;
-    ;
     display: block;
     width: 100%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     color: #eee;
-    font-size: 2rem;
+    font-size: 1.6rem;
     text-decoration: none;
     text-align: center;
     border-radius: 10px;
-}
-.hand .btn:hover {
-    background-color: #916a34;
+    margin-top: 2rem;
 }
 
-.handbook .hand {
-    display: flex;  
-    align-items: center;
-    flex-wrap: wrap;
-    background: var(--black);
-    margin-left: 4rem;
-    margin-right: 4rem;
+#docs {
+    display: grid;
+    place-items: center;
+    margin-top: 0rem;
 }
-.handbook .hand .content {
-    width: 50%;
-    text-align: left;
-    height: auto;
-    color: #fff;
-    top: 0;
-    background: var(--black);
-    margin-left: 4rem;
+.all {
+    margin-top: 3rem;
 }
 
-.handbook .hand .content h3 {
-    font-size: 2.7rem;
-    color: #cfae81;
-    font-weight: 500;
-}
-.handbook .hand .content p {
-    font-size: 1.2rem;
-    color: #ccc;
-    padding: 1rem 0;
-    line-height: 1.8;
-    font-weight: 200;
-}
-.hand .btn {
-    background-color: #be9965;
-    ;
-    display: block;
-    width: 100%;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    color: #eee;
-    font-size: 2rem;
-    text-decoration: none;
-    text-align: center;
-    border-radius: 10px;
-}
-.hand .btn:hover {
-    background-color: #916a34;
-}
-
-
-.archi .arc {
-    display: flex;  
-    align-items: center;
-    flex-wrap: wrap;
-    background: var(--black);
-    margin-left: 4rem;
-    margin-right: 4rem;
-}
-.archi .arc img {
-    height: auto;
-    width: 350px;
-}
-.archi .arc .content {
-    width: 50%;
-    text-align: left;
-    height: auto;
-    color: #fff;
-    top: 0;
-    background: var(--black);
-    margin-left: 4rem;
-}
-
-.archi .arc .content h3 {
-    font-size: 2.7rem;
-    color: #cfae81;
-    font-weight: 500;
-}
-.archi .arc .content p {
-    font-size: 1.2rem;
-    color: #ccc;
-    padding: 1rem 0;
-    line-height: 1.8;
-    font-weight: 200;
-}
-.arc .btn {
-    background-color: #be9965;
-    ;
-    display: block;
-    width: 100%;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    color: #eee;
-    font-size: 2rem;
-    text-decoration: none;
-    text-align: center;
-    border-radius: 10px;
-}
-.arc .btn:hover {
-    background-color: #916a34;
-}
 
 
 
@@ -503,207 +379,72 @@ header .navbar ul li a:hover {
 
 }
 
-@media (max-width:768px) {
-    .home {
-        background-position: left;
-        justify-content: center;
-        text-align: center;
-    }
-    .home .content h3 {
-        font-size: 4.5rem;
-    }
-    .home .content p {
-        font-size: 1.5rem;
-    }
-    .basic .row .image img{
-        max-width: 350px;
-    }
-}
-
 @media (max-width:425px) {
-    .home {
-        background-position: center;
-        justify-content: center;
-        text-align: center;
-        width: min-content;
+    .home .content_1 {
+        margin-top: 11rem;
+        margin-left: 1rem;
     }
-    .home .content {
-        margin-top: 10rem;
-        margin-left: 3rem;
-        margin-right: 5rem;
-        margin-bottom: 2rem;
-
+    .home .content_1 h3 {
+        font-size: 4rem;
     }
-    .home .content h3 {
-        font-size: 4.5rem;
-        
+    .book-list {
+        display: block;
     }
-    .home .content p {
-        font-size: 1.5rem;
-    }
-    .heading {
-        margin-left: 0rem;
-    }
-    .basic .row {
-        margin-left: 2.5rem;
-        width: fit-content;
-        
-    }
-    .basic .row .content {
-        margin: 1.5rem;
-        text-align: justify;
-        width: fit-content;
-    }
-    .basic .row .content p {
-        font-size: 1.3rem;
-    }
-    .basic .row .content h3 {
-        font-size: 2rem;
-    }
-    .basic .row .btn {
-        font-size: 1.3rem;
-    }
-    .basic .row img {
-        width: 30rem;
-    }
-    .contact .cont {
-        background: var(--bg);
-    }
-
-    .contact .cont .map {
-        height: 600px;
-        width: 40%;
-        object-fit: cover;
-        margin-right: 50%;
-    }
-    .footer {
-        margin-top: 3rem;
-        margin-bottom: 2rem;
+    .book-list img {
+        width: 100%;
+        height: auto;
     }
     .footer .links {
         display: none;
     }
-
-    .contact .cont form h3 {
-        font-size: 1.8rem;
+    .content .btn {
+        margin-bottom: 2rem;
     }
-    .contact .cont form p {
-        font-size: 1.15rem;
+    .content h3 {
+        font-size: 1.9rem;
     }
-}
-@media (max-width:375px) {
-    .home .content {
-        margin-left: 3rem;
+    .content p {
+        font-size: 1.3rem;
     }
-    .heading {
-        margin-left: 3rem;
-        font-size: 3.8rem;
+    .content .btn {
+        font-size: 1.3rem;
     }
-    .basic .row {
-        margin-left: 2.8rem;
-        width: 94%;     
+    .home .content_1 {
+        max-width: 40rem;
+        padding-left: 10px;
+        text-align: left;
+        margin-right: 1rem;
     }
-    .basic .row img {
-        width: 500px;
+    .home .content_1 h3 {
+        font-size: 5rem;
     }
-    .basic .row .content {
-        margin: 1.5rem;
-        text-align: justify;
-        width: fit-content;
+    .home .content_1 p {
+        font-size: 1.2rem;
     }
-    .basic .row .content p {
-        font-size: 1.8rem;
+    .home .btn {
+        margin-bottom: 2rem;
+        font-size: 1.2rem;
     }
-    .handbook .hand img {
-        width: 305px;
+    .home .btn:hover {
+        color: goldenrod;
+        background-color: rgb(71, 1, 1);
     }
-    .handbook .hand {
-        margin-left: 5rem;
-        width: fit-content;
-    }
-    .handbook .hand .content {
-        margin: 1.5rem;
-        text-align: justify;
-        width: fit-content;
-    }
-    .handbook .hand .content p {
-        font-size: 1.8rem;
-    }
-    .archi .arc img {
-        width: 305px;
-        height: auto;
-    }
-    .archi .arc {
-        margin-left: 5rem;
-        width: fit-content;
-    }
-    .archi .arc .content p {
-        font-size: 1.8rem;
-    }
-    .archi .arc .content {
-        margin: 1.5rem;
-        text-align: justify;
-        width: fit-content;
+    .footer .links{
+        display: none;
     }
     .contact .cont {
-        background-color: var(--bg);
+        background: var(--bg);
+        margin-bottom: 2rem;
     }
+
     .contact .cont .map {
         height: 600px;
         width: 50%;
         object-fit: cover;
-        margin-right: 80%;
-    }
-    .contact .cont form {
-        text-align: left;
-        position: absolute;
-        margin-left: 50%;
-        width: 60%;
-    }
-    .contact .cont form h3 {
-        font-size: 2rem;
+        margin-right: 50%;
     }
     .contact .cont form p {
         font-size: 1.2rem;
-    }
-    .footer {
-        margin-top: 3rem;
-        margin-bottom: 2rem;
-        margin-left: 5rem;
-    }
-}
-@media (max-width:320px) {
-    .basic .row {
-        margin-left: 0.5rem;
-        width: fit-content;   
-        margin-left: 3rem;  
-    }
-    .basic .row img {
-        width: fit-content;
-    }
-    .basic .row .content {
-        margin: 1.5rem;
-        text-align: justify;
-        width: fit-content;
-    }
-    .basic .row .content p {
-        font-size: 1.8rem;
-    }
-    .contact .cont .map {
-        height: 600px;
-        width: 60%;
-        object-fit: cover;
-        margin-right: 80%;
-    }
-    .contact .cont form {
-        text-align: left;
-        position: absolute;
-        margin-left: 60%;
-        width: 70%;
-    }
-    .heading {
-        font-size: 3.5rem;
-        margin-left: 6.5rem;
     }
 }
 
