--- a/rhythms.css
+++ b/rhythms.css
@@ -123,7 +123,7 @@ nav ul li:hover > ul { display: block; }
 }
 .book {
     display: block;
-    margin-bottom: 7rem;
+    margin-bottom: 3rem;
 }
 .book img {
     height: 30rem;
@@ -258,34 +258,34 @@ nav ul li:hover > ul { display: block; }
 }
 @media (max-width:425px) {
     #docs {
-        background: none;
+        background: var(--bg);
     }
     .book {
-        display: grid;
+        background-color: var(--black);
+        margin-right: 0.5rem;
+        margin-top: 13rem;
+        margin-left: 0.5rem;
     }
     .footer .links {
         display: none;
     }
-}
-@media (max-width:375px) {
-    .book-list {
-        width: fit-content;
+    .book .video {
+        display: block;
+    }
+    .video iframe {
+        margin-top: 1.2rem;
+        width: 100%;
         margin-left: 1.5rem;
     }
     .content {
-        margin-right: 3rem;
+        margin:1.5rem;
         text-align: justify;
+        height: auto;
     }
+}
+@media (max-width:375px) {
     .video {
-        margin-left: 2rem;
+        margin-left: 0rem;
     }
 
-}
-@media (max-width:320px) {
-    .book-list {
-        margin-left: 1.5rem;
-    }
-    .footer {
-        width: 120%;
-    }
 }
