--- a/Capoeira Quotes.css
+++ b/Capoeira Quotes.css
@@ -6,6 +6,7 @@ body {
 	background-position: center center;
 	background-attachment: fixed;
     font-family: 'Times New Roman', Times, serif;
+	overflow-x: hidden;
 }
 * {
     margin: 0;
