--- a/mestres.css
+++ b/mestres.css
@@ -1,11 +1,12 @@
 body {
     height: auto;
-    background: url(https://img.freepik.com/free-vector/modern-black-luxury-background-with-hexagon-pattern_87202-1055.jpg?w=826&t=st=1688228535~exp=1688229135~hmac=84aa134d791df910ea49456c9c14c85ab2f1a8f1c395cff026b2e17565f4db14);
+    background: var(--bg);
     background-repeat: no-repeat;
     background-size: cover;
 	background-position: center center;
 	background-attachment: fixed;
     font-family: 'Times New Roman', Times, serif;
+    margin-top: 10rem;
 }
 * {
     margin: 0;
@@ -88,13 +89,6 @@ nav ul li ul li:hover {
 }
 nav ul li:hover > ul { display: block; }
 
-
-#service {
-    display: grid;
-    place-items: center;
-    min-height: 100vh;
-    width: 100vh;
-}
 .heading {
     text-align: center;
     color: #fff;
@@ -108,196 +102,11 @@ nav ul li:hover > ul { display: block; }
     text-shadow: -1px -1px 0 rgb(240, 183, 27), 1px -1px 0 rgb(240, 183, 27), -1px 1px 0 rgb(240, 183, 27), 1px 1px 0 rgb(240, 183, 27);
     text-transform: uppercase;
 }
-.mestres {
-    width: 90%;
-}
-
-.box_m {
-    background-color: var(--bg);
-    max-width: 60rem;
-    border-radius: 0.5rem;
-    box-shadow: 0 0 0.3rem rgb(206, 205, 205);
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 2rem 2rem;
-    margin-left: 3.5rem;
-    margin-right: -3.5rem;
-    margin-bottom: 2rem;
-    clear: both;
-}
-.btn {
-    background-color: darkred;
-    display: block;
-    width: 100%;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    color: #eee;
-    font-size: 2rem;
-    text-decoration: none;
-    text-align: center;
-    transition: color 0.3s linear;
-    border-radius: 10px;
-}
-.btn:hover {
-    color: goldenrod;
-    background-color: rgb(71, 1, 1);
-}
-img {
-    height: 10rem;
-    width: auto;
-    margin-right: 2rem;
-}
-.info {
-    padding-left: 2.5rem;
-    border-left: 0.2rem solid rgb(206, 205, 205);
-}
-.info h3 {
-    font-size: 2.6rem;
-    color: rgb(206, 205, 205);
-    font-weight: 400;
-    font-family: 'Times New Roman', Times, serif;
-}
-.info h2 {
-    font-size: 2.2rem;
-    color: rgb(206, 205, 205);
-    font-weight: 400;
-    font-family: 'Times New Roman', Times, serif;
-    margin-top: 0.5rem;
-}
-.info h4 {
-    font-size: 2rem;
-    color: rgb(206, 205, 205);
-    font-weight: 400;
-    font-family: 'Times New Roman', Times, serif;
-    margin-top: 0.8rem;  
-}
-.info p {
-    font-size: 1.3rem;
-    color: rgb(206, 205, 205);
-    font-weight: 400;
-    font-family: 'Times New Roman', Times, serif;
-    margin-top: 1rem;
-}
-.box_m:nth-child(2) {
-    float: right;
-}
-.info h2 a {
-	text-decoration: none;
-	color: rgb(206, 205, 205);
-}
-.info h2 a:hover {
-	color: rgb(206, 205, 205);
-    text-shadow: 0 0 1rem rgb(255, 166, 0);
-    transition: color 0.5s linear;
-}
-.info a {
-    font-size: 1.5rem;
-    margin-top: 1rem;
-}
-.box_m:nth-child(4) {
-    float: right;
-}
-.box_m:nth-child(6) {
-    float: right;
-}
-.box_m:nth-child(8) {
-    float: right;
-}
-.box_m:nth-child(10) {
-    float: right;
-}
-.box_m:nth-child(12) {
-    float: right;
-}
-.box_m:nth-child(14) {
-    float: right;
-}
-.box_m:nth-child(16) {
-    float: right;
-}
-.box_m:nth-child(18) {
-    float: right;
-}
-.box_m:nth-child(20) {
-    float: right;
-}
-.box_m:nth-child(22) {
-    float: right;
-}
-.box_m:nth-child(24) {
-    float: right;
-}
-.box_m:nth-child(26) {
-    float: right;
-}
-.box_m:nth-child(28) {
-    float: right;
-}
-.box_m:nth-child(30) {
-    float: right;
-}
-.box_m:nth-child(32) {
-    float: right;
-}
-.box_m:nth-child(34) {
-    float: right;
-}
-.box_m:nth-child(36) {
-    float: right;
-}
-.box_m:nth-child(38) {
-    float: right;
-}
-.box_m:nth-child(40) {
-    float: right;
-}
-.box_m:nth-child(42) {
-    float: right;
-}
-.box_m:nth-child(44) {
-    float: right;
-}
-.box_m:nth-child(46) {
-    float: right;
-}
-.box_m:nth-child(48) {
-    float: right;
-}
-.box_m:nth-child(50) {
-    float: right;
-}
-.box_m:nth-child(52) {
-    float: right;
-}
-.box_m:nth-child(54) {
-    float: right;
-}
-.box_m:nth-child(56) {
-    float: right;
-}
-.box_m:nth-child(58) {
-    float: right;
-}
-.box_m:nth-child(60) {
-    float: right;
-}
-.box_m:nth-child(62) {
-    float: right;
-}
-.box_m:nth-child(64) {
-    float: right;
-}
-.box_m:nth-child(68) {
-    float: right;
-}
-.box_m:nth-child(69) {
-    float: right;
-}
 
 .footer {
     background: var(--bg);
     text-align: center;
-    margin-top: 27rem;
+    width: 100%;
 }
 .footer .share a{
     margin-right: 2rem;
@@ -334,21 +143,84 @@ img {
 .footer .credit span {
     color: #cfae81;
 }
+.container {
+    margin-bottom: 2rem;
+}
+.img-box img {
+    display: block;
+    width: 100%;
+    height: 25rem;
+    object-fit: cover;
+}
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    grid-gap: 2rem;
+    text-align: center;
+    width: 90%;
+    margin: auto;
+}
 
-.home_2 {
-    height: 35vh;
-    display: flex;
-    align-items: center;
-    margin-top: 40px;
-    background: url(https://img.freepik.com/free-vector/modern-black-luxury-background-with-hexagon-pattern_87202-1055.jpg?w=826&t=st=1688228535~exp=1688229135~hmac=84aa134d791df910ea49456c9c14c85ab2f1a8f1c395cff026b2e17565f4db14);
-    background-repeat: no-repeat;
-    background-size: cover;
-	background-position: center center;
-	background-attachment: fixed;
+.btn {
+    background-color: #be9965;
+    display: block;
+    width: 60%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    color: #eee;
+    font-size: 1.3rem;
+    text-decoration: none;
     text-align: center;
     justify-content: center;
-    margin-top: 8rem;
+    transition: color 0.3s linear;
+    border-radius: 10px;
+    margin-top: 2rem;
+    position: absolute;
+    left: 20%;
 }
+.btn:hover {
+    background-color: #806642;
+}
+
+.card {
+    display: block;
+    overflow: hidden;
+    border-radius: 0.6rem;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.7);
+    cursor: pointer;
+    transition: 0.2s;
+    position: relative;
+}
+.card-content {
+    position: absolute;
+    background: rgba(0, 0, 0, 0.7);
+    bottom: 0;
+    color: #eee;
+    width: 100%;
+    height: 20%;
+    padding: 2.2rem 0;
+    overflow: hidden;
+    transition: 0.7s;
+}
+.card-content h1 {
+    font-size: 2rem;
+    text-transform: capitalize;
+}
+.card-content h2 {
+    font-size: 1.8rem;
+    text-transform: capitalize;
+    margin-top: 1rem;
+}
+.card-content p {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    padding: 1.2rem;
+}
+.card-content:hover {
+    height: 50%;
+    transition: 0.7s;
+}
+
 .logo img {
     height: 100px; 
     width: auto; 
@@ -358,6 +230,22 @@ img {
 .menu-btn {
     display: none;
 }
+
+.heading {
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+    padding-bottom: 3.5rem;
+    font-size: 4rem;
+    margin-top: 10rem;
+}
+.heading span {
+    color: var(--main-color);
+    text-shadow: -1px -1px 0 rgb(240, 183, 27), 1px -1px 0 rgb(240, 183, 27), -1px 1px 0 rgb(240, 183, 27), 1px 1px 0 rgb(240, 183, 27);
+    text-transform: uppercase;
+}
+
+
 @media (max-width:991px){
     .home {
         background-position: left;
@@ -402,74 +290,28 @@ img {
         margin-bottom: 3rem;
     }
 }
+@media (max-width:768px) {
+    .container {
+        margin-top: 13rem;
+    }
+    .grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    
+}
 @media (max-width:425px) {
-    .info p {
-        display: none;
+    .container {
+        margin-top: 13rem;
     }
-    .box_m {
-        width: 28rem;
-    }
-    .footer {
-        width: 110%;
+    .grid {
+        grid-template-columns: repeat(1, 1fr);
     }
     .footer .links {
         display: none;
     }
-}
-@media (max-width:375px) {
-    .heading {
-        margin-left: 0rem;
-        font-size: 3.5rem;
-    }
-    .info p {
-        display: none;
-    }
-    .footer {
-        width: 110%;
-    }
-    .footer .links {
-        display: none;
-    }
-    .box_m {
-        margin-left: 0.3rem;
-        margin-right: -4.5rem;
-        width: 29rem;
-    }
-    .mestres {
-        margin-left: 0.5rem;
-    }
-}
-@media (max-width:320px) {
-    .heading {
-        margin-left: 1rem;
-        font-size: 3.5rem;
-    }
-    .info p {
-        display: none;
-    }
-    .footer {
-        width: 110%;
-    }
-    .footer .links {
-        display: none;
-    }
-    .box_m {
-        margin-left: 0.3rem;
-        margin-right: -4.5rem;
-        width: 25.4rem;
-    }
-    .mestres {
-        margin-left: 0.5rem;
-    }
-    .btn {
-        background-color: darkred;
+    .img-box img {
         display: block;
-        width: 100%;
-        border: 1px solid rgba(0, 0, 0, 0.1);
-        color: #eee;
-        font-size: 1rem;
-        text-decoration: none;
-        text-align: left;
-        transition: color 0.3s linear;
+        height: 29.5rem;
+
     }
 }
